crates/llmem-server/src/snapshots/llmem_server__tests__snapshot_health_with_context.snap
---
source: crates/llmem-server/src/main.rs
expression: json
---
{
  "active_context": "/tmp/my-project",
  "global_memories": 0,
  "project_memories": 0,
  "status": "ok",
  "version": "[version]"
}
