crates/llmem-server/src/snapshots/llmem_server__tests__snapshot_search_with_results.snap
---
source: crates/llmem-server/src/main.rs
expression: json
---
[
  {
    "file": "feedback_write-tests.md",
    "level": "project",
    "score": 1.0,
    "summary": "always write tests",
    "title": "write tests"
  }
]
